# Hack-TUES-12-frontend

./: README.md
Frontend/: .env  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
Frontend/desktop-connector/: README.md  index.html  package-lock.json  package.json
Frontend/desktop-connector/src/: App.jsx  styles.css
Frontend/desktop-connector/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/desktop-connector/src-tauri/capabilities/: default.json
Frontend/desktop-connector/src-tauri/src/: main.rs
Frontend/docker/: nginx.conf
Frontend/src/: App.jsx  index.css
Frontend/src/components/: NavBar.jsx
Frontend/src/lib/: api.js
Frontend/src/pages/: HomePage.jsx  LoginPage.jsx  PlaceholderPage.jsx  VMCollectionPage.jsx  VMTerminalPage.jsx  YourVMsPage.jsx
